Bug 254451 - Signal ARQL when a download fails
Summary: Signal ARQL when a download fails
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebXR (show other bugs)
Version: WebKit Local Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Dean Jackson
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-03-24 17:58 PDT by Dean Jackson
Modified: 2023-04-27 18:29 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dean Jackson 2023-03-24 17:58:17 PDT
ARQL doesn't get told when a download fails. Add this using their new SPI.
Comment 1 Dean Jackson 2023-03-24 17:58:40 PDT
rdar://104039022
Comment 2 Dean Jackson 2023-03-24 18:04:45 PDT
Pull request: https://github.com/WebKit/WebKit/pull/11959
Comment 3 EWS 2023-04-27 18:29:42 PDT
Committed 263479@main (345d5c9e9dae): <https://commits.webkit.org/263479@main>

Reviewed commits have been landed. Closing PR #11959 and removing active labels.