Signal ARQL when a download fails https://bugs.webkit.org/show_bug.cgi?id=254451 rdar://104039022

Reviewed by Tim Horton.

ARQL doesn't get told when a download fails. Add this using their new SPI.

* Source/WebCore/PAL/pal/spi/ios/SystemPreviewSPI.h: Add the new SPI.
* Source/WebKit/UIProcess/Cocoa/SystemPreviewControllerCocoa.mm:
    - Open the file handle as soon as we start downloading, so that
      we can make a URL.
    - ARQL fails if you give it a .reality file that doesn't
      have the right file extension, so add that if necessary.
    - Close the file handle if we fail the download. Also, tell
      ARQL that the load failed.
    - Lastly, make sure we always attach the fragment identifier, so
      ARQL knows that the cancel is related to a previous launch call.
* Source/WebKit/UIProcess/SystemPreviewController.h:

Canonical link: https://commits.webkit.org/263479@main